Modified the Chrome Custom Tab sample to serve as an OAuth 2.0 for Native Apps proof of concept – Registered an iOS client at console.developers.google.com (iOS clients support Custom URI schemes) – Added the reverse-client-id scheme of that iOS client to the AndroidManifest.xml to register for intents on that scheme – Created a new Activity "CustomLink" to handle incoming intents on that scheme – Defaulted demo to use my sample domain https://www.oauth2.pw
More about OAuth 2.0 for Native Apps: https://tools.ietf.org/html/draft-wdenniss-oauth-native-apps-00

--- a/Application/src/main/res/layout/main.xml
+++ b/Application/src/main/res/layout/main.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/url_hint"
-        android:text="http://www.android.com" />
+        android:text="http://www.oauth2.pw" />
 
     <Space
         android:layout_width="match_parent"
