--- a/Application/src/main/res/layout/activity_customlink.xml
+++ b/Application/src/main/res/layout/activity_customlink.xml
@@ -6,7 +6,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="org.chromium.customtabsclient.Customlink">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/code_textview"
+        android:text="@string/hello_world"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
